# DualTrack_Quant_Research

./: .gitignore  AKShare API.txt  CLAUDE.md  Dockerfile  README.md  README_ru.md  README_zh.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: backtest_config.yaml  data_config.yaml  llm_config.yaml  ml_config.yaml
data/signals/: CSI300_LGB_walkforward.csv  (+5 more)
docs/: A_SHARE_FIX_GUIDE.md  CORRECTED_UNDERSTANDING.md  EXPERIMENT_PLAN.md  MAIN_PY_RESTORE_PLAN.md  NEXT_STEPS.md  PROJECT_ROADMAP.md  README.md  REFACTOR_IMPLEMENTATION_PLAN.md  a_share_fix_comparison.txt  fix_comparison.txt  short_selling_fix_comparison.txt
scripts/: backtest_agent_vs_ml.py  backtest_all_llm.py  backtest_threshold_grid.py  chapter3_analysis.py  check_data_ready.py  clean_and_merge_news.py  clean_kaggle_news.py  download_additional_datasets.py  download_open_source_news.py  fetch_complete_data.py  fetch_csi300_constituents.py  fetch_financial_news.py  fetch_financial_news_5years.py  fetch_full_data.py  fetch_qqq_training_data.py  fetch_realtime_financial_news.py  fetch_training_data.py  generate_market_state_figures.py  generate_shap_plots.py  prepare_data.py  prepare_us_news.py  statistical_tests.py  train_ml_models.py  validate_cache.py  verify_references.py
src/: __init__.py
tests/: __init__.py  test_advanced_evaluation.py  test_backtest.py  test_bt_engine.py  test_data_module.py  test_evaluation.py  test_llm_track.py  test_ml_track.py  test_orchestrator.py  test_real_market_data.py  test_us_market.py  test_us_news_data.py
thesis/: main.tex  thesis_outline.md
(+109 files in other folders)
