[project]
name = "dualtrack-quant-research"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.30",
    "backtrader>=1.9.78.123",
    "click>=8.3.1",
    "datasets>=4.6.1",
    "kaggle>=2.0.0",
    "langchain>=1.2.10",
    "lightgbm>=4.6.0",
    "loguru>=0.7.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "openai>=2.24.0",
    "pandas>=3.0.1",
    "pandas-market-calendars>=4.3.0",  # 新增：交易日历支持
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
    "quantstats>=0.0.81",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.66.0",
    "xgboost>=3.2.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
